tests/mm0_mmu/fail/bad-sort231.mmu
-- bad modifier order
(sort s231 strict provable pure)